# Python-OS

./: .gitignore  README.md  cpu.py  io_manager.py  main.py  process.py  pyproject.toml  scheduler.py
docs/: scheduler.md
docs/python_os/: scheduler.md
src/learning_os/: cpu.py  io_manager.py  main.py  process.py  scheduler.py
src/learning_os/file_system/: __init__.py  basic_fs.py  file_system.py  inode.py  json_fs.py
src/learning_os/memory/: __init__.py  allocation_policy.py  allocator.py  malloc.py
src/learning_os/memory/heap_allocator/: __init__.py  best_fit.py  first_fit.py  worst_fit.py
src/learning_os/scheduler/: __init__.py  cfs.py  lottery.py  mlfq.py  round_robin.py  scheduler.py  simple.py
src/learning_os/storage/: storage.py
src/python_os/: cpu.py  io_manager.py  main.py
src/python_os/file_system/: basic_fs.py  inode.py
src/python_os/memory/: __init__.py  allocator.py  page_table.py  page_table_entry.py  paging.py
src/python_os/memory/dynamic_allocation/: __init__.py  buddy_fit.py  first_fit.py
src/python_os/memory/heap_allocator/: best_fit.py  buddy_fit.py  malloc.py  worst_fit.py
src/python_os/memory/simple/: allocation_policy.py  allocator.py  base_and_bound.py  segmented.py
src/python_os/scheduler/: __init__.py  cfs.py  lottery.py  mlfq.py  round_robin.py  scheduler.py  simple.py
