[project]
name = "learning-os"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ivan", email = "tan.yuhao.ivan@gmail.com"},
]
dependencies = ["sortedcontainers>=2.4.0"]
requires-python = "~=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
